tried solving the menu issue by setting its visibility to hidden programatically, but failed. I think it is the right path, i only need to figure out why it is not working

--- a/src/app/core/core.component.sass
+++ b/src/app/core/core.component.sass
@@ -4,6 +4,9 @@
     --ShellPlusMenu: 220px
 
 
+::ng-deep.hiddenMenu
+  visibility: hidden
+  oppasity: 0%
 
 .coreHitBox
   width: fit-content
